# search_engine_client

./: .gitignore  README.md  pyproject.toml  test_search.py
.github/workflows/: python-publish.yml
src/search_engine_pkg.egg-info/: SOURCES.txt  requires.txt
src/search_wrapper/: __init__.py
src/search_wrapper/engines/: base.py  bing.py  duckduckgo.py  serper.py
tests/: test_bing.py  test_duckduckgo.py  test_serper.py
