[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "search_engine_pkg"
version = "0.1.0"
description = "A unified wrapper for search engines like Serper, DuckDuckGo, etc."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.20.0",
    "beautifulsoup4",
    "playwright",
]

[project.urls]
Homepage = "https://github.com/yourusername/search_engine_pkg"